# ComfyUI-Simple-Prompt-Batcher

./: FLUX2-DEV-KLEIN_4_and_9B_1_click_multiple_character_angles-v1.0.json  README.md  __init__.py  prompt_batcher.py  pyproject.toml
examples/: z-image_simple_prompt_batcher..json
