[project]
name = "simple-prompt-batcher"
description = "A simple and efficient ComfyUI custom node that allows batch processing of multiple prompts in a single queue with automatic model loading optimization."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/ai-joe-git/ComfyUI-Simple-Prompt-Batcher"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ai-joe-git/ComfyUI-Simple-Prompt-Batcher/wiki"
"Bug Tracker" = "https://github.com/ai-joe-git/ComfyUI-Simple-Prompt-Batcher/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Simple-Prompt-Batcher"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

