[project]
name = "comfyui-simple-prompt-batcher"
description = "A simple and efficient ComfyUI custom node that allows you to batch process multiple prompts in a single queue. Perfect for testing variations, exploring different ideas, or running systematic prompt experiments."
version = "1.0.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ai-joe-git/ComfyUI-Simple-Prompt-Batcher"

[tool.comfy]
PublisherId = "ai-joe-git"
DisplayName = "Simple Prompt Batcher"
Icon = ""
